added Table and Shapes

--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
     <script src="src/script.js"></script>
-    <title>Tictactoe</title>
+    <title>Tic tac toe</title>
 </head>
 <body>
+    <table>
+        <tr>
+            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
+            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
+            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
+        </tr>
+        <tr>
+            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
+            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
+            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
+        </tr>
+        <tr>
+            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
+            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
+            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
+        </tr>
+    </table>
     
 </body>
 </html>
