--- a/index.html
+++ b/index.html
@@ -11,19 +11,37 @@
 <body>
     <table>
         <tr>
-            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
-            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
-            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
+            <td>
+                <img class="shape d-none" src="src/img/circle.png" alt="circle">
+                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
+            <td>
+                <img class="shape d-none" src="src/img/circle.png" alt="circle">
+                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
+            <td>
+                <img class="shape d-none" src="src/img/circle.png" alt="circle">
+                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
         </tr>
         <tr>
-            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
-            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
-            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
+            <td>
+                <img class="shape d-none" src="src/img/circle.png" alt="circle">
+                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
+            <td>
+                <img class="shape d-none" src="src/img/circle.png" alt="circle">
+                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
+            <td>
+                <img class="shape d-none" src="src/img/circle.png" alt="circle">
+                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
         </tr>
         <tr>
-            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
-            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
-            <td><img class="shape" src="src/img/circle.png" alt="circle"><img class="shape" src="src/img/cross.png" alt=""></td>
+            <td>
+                <img class="shape d-none" src="src/img/circle.png" alt="circle">
+                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
+            <td>
+                <img class="shape d-none" src="src/img/circle.png" alt="circle">
+                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
+            <td>
+                <img class="shape d-none" src="src/img/circle.png" alt="circle">
+                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
         </tr>
     </table>
     
