added Array for Cross and Circle

--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
 <body>
     <table>
         <tr>
-            <td>
+            <td onclick="fillShape(0)">
                 <img class="shape d-none" src="src/img/circle.png" alt="circle">
                 <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
-            <td>
+            <td onclick="fillShape(1)">
                 <img class="shape d-none" src="src/img/circle.png" alt="circle">
                 <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
-            <td>
-                <img class="shape d-none" src="src/img/circle.png" alt="circle">
-                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
-        </tr>
-        <tr>
-            <td>
-                <img class="shape d-none" src="src/img/circle.png" alt="circle">
-                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
-            <td>
-                <img class="shape d-none" src="src/img/circle.png" alt="circle">
-                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
-            <td>
+            <td onclick="fillShape(2)">
                 <img class="shape d-none" src="src/img/circle.png" alt="circle">
                 <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
         </tr>
         <tr>
-            <td>
+            <td onclick="fillShape(3)">
                 <img class="shape d-none" src="src/img/circle.png" alt="circle">
                 <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
-            <td>
+            <td onclick="fillShape(4)">
                 <img class="shape d-none" src="src/img/circle.png" alt="circle">
                 <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
-            <td>
+            <td onclick="fillShape(5)">
+                <img class="shape d-none" src="src/img/circle.png" alt="circle">
+                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
+        </tr>
+        <tr>
+            <td onclick="fillShape(6)">
+                <img class="shape d-none" src="src/img/circle.png" alt="circle">
+                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
+            <td onclick="fillShape(7)">
+                <img class="shape d-none" src="src/img/circle.png" alt="circle">
+                <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
+            <td onclick="fillShape(8)">
                 <img class="shape d-none" src="src/img/circle.png" alt="circle">
                 <img class="shape d-none" src="src/img/cross.png" alt="cross"></td>
         </tr>
