added function check for Winner and Show/hide Player headline

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <title>Tic tac toe</title>
 </head>
 <body>
+    <div class="playerPanel">
+        <div id="player-1">
+            <img src="src/img/circle.png" alt="circle">
+            Player 1
+        </div>
+        <div id="player-2" class="inactivePlayer">
+            <img src="src/img/cross.png" alt="cross"></td>
+            Player 2
+        </div>
+    </div>
     <table>
         <tr>
             <td onclick="fillShape(0)">
