added animated Winning Line

--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
             Player 2
         </div>
     </div>
+
+    <div id="line-1" class="horizontalLine" style="top: 393px;"></div>
+    <div id="line-2" class="horizontalLine" style="top: 528px;"></div>
+    <div id="line-3" class="horizontalLine" style="top: 661px;"></div>
+
+    <div id="line-4" class="horizontalLine makeVertical" style="top: 526px; right: 438px;"></div>
+    <div id="line-5" class="horizontalLine makeVertical" style="top: 526px; right: 302px;"></div>
+    <div id="line-6" class="horizontalLine makeVertical" style="top: 526px; right: 169px;"></div>
+    
+
+    <div id="line-7" class="horizontalLine makeDiagonal" style="top: 526px; right: 254px; transform: rotate(45deg); transform: scaleX(0.0);"></div>
+    <div id="line-8" class="horizontalLine makeDiagonal" style="top: 526px; right: 251px; transform: rotate(-45deg); transform: scaleX(0.0);"></div>
+
     <table>
         <tr>
             <td onclick="fillShape(0)">
