added GameOver Animation

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Tic tac toe</title>
 </head>
 <body>
+    <img class="gameOver d-none" id="gameOver" src="./src/img/game-over.png" alt="game-over">
+
     <div class="playerPanel">
         <div id="player-1">
             <img src="src/img/circle.png" alt="circle">
