--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <img class="gameOver d-none" id="gameOver" src="./src/img/game-over.png" alt="game-over">
-
+    <button id="restartButton" class="restartButton d-none" onclick="restart()">Restart</button>
     <div class="playerPanel">
         <div id="player-1">
             <img src="src/img/circle.png" alt="circle">
